--- a/easy-product-card/product-preview-card-component-main/index.html
+++ b/easy-product-card/product-preview-card-component-main/index.html
@@ -26,15 +26,28 @@
     </style>
   </head>
   <body>
-    Preview Gabrielle Essence Eau De Parfum A floral, solar and voluptuous
-    interpretation composed by Olivier Polge, Perfumer-Creator for the House of
-    CHANEL. $149.99 $169.99 Add to Cart
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    <main>
+      <article class="card__container">
+        <figure class="card__img__container">img</figure>
+      </article>
+      <header>
+        <p class="sub-title">Perfume</p>
+        <h2 class="title">Gabrielle Essence</h2>
+        <h2 class="title">Eau De Parfum</h2>
+      </header>
+      <section class="card-text">
+        <p>
+          A floral, solar and voluptuous interpretation composed by Olivier
+          Polge, Perfumer-Creator for the House of CHANEL.
+        </p>
+      </section>
+      <section class="price-section">
+        <span class="main-price">$149.99</span>
+        <span class="old-price">$169.99</span>
+      </section>
+      <section class="btn-container">
+        <button class="cart-btn">Add to Cart</button>
+      </section>
+    </main>
   </body>
 </html>
