Add image and wrap card-content

--- a/easy-product-card/product-preview-card-component-main/index.html
+++ b/easy-product-card/product-preview-card-component-main/index.html
@@ -16,26 +16,35 @@
   <body>
     <main>
       <article class="card__container">
-        <figure class="card__img__container">img</figure>
+        <figure class="card__img__container">
+          <!-- <img
+            src="images/image-product-mobile.jpg"
+            alt="zoomed in perfume"
+            class="card-img"
+          /> -->
+        </figure>
+
+        <div class="card-content">
+          <header>
+            <p class="sub-title">Perfume</p>
+            <h2 class="title">Gabrielle Essence</h2>
+            <h2 class="title">Eau De Parfum</h2>
+          </header>
+          <section class="card-text">
+            <p>
+              A floral, solar and voluptuous interpretation composed by Olivier
+              Polge, Perfumer-Creator for the House of CHANEL.
+            </p>
+          </section>
+          <section class="price-section">
+            <span class="main-price">$149.99</span>
+            <span class="old-price">$169.99</span>
+          </section>
+          <section class="btn-container">
+            <button class="cart-btn">Add to Cart</button>
+          </section>
+        </div>
       </article>
-      <header>
-        <p class="sub-title">Perfume</p>
-        <h2 class="title">Gabrielle Essence</h2>
-        <h2 class="title">Eau De Parfum</h2>
-      </header>
-      <section class="card-text">
-        <p>
-          A floral, solar and voluptuous interpretation composed by Olivier
-          Polge, Perfumer-Creator for the House of CHANEL.
-        </p>
-      </section>
-      <section class="price-section">
-        <span class="main-price">$149.99</span>
-        <span class="old-price">$169.99</span>
-      </section>
-      <section class="btn-container">
-        <button class="cart-btn">Add to Cart</button>
-      </section>
     </main>
   </body>
 </html>
