--- a/easy-news-homepage/news-homepage-main/index.html
+++ b/easy-news-homepage/news-homepage-main/index.html
@@ -1,60 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Frontend Mentor | News homepage</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+      integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="styles/css/styles.css" />
+    <script src="scripts/app.js" defer></script>
+  </head>
+  <body>
+    <div class="backdrop"></div>
+    <nav class="nav">
+      <div class="nav__wrapper">
+        <div class="nav__brand-wrapper">
+          <a href="#" class="nav__brand">
+            <img src="assets/images/logo.svg" alt="" />
+          </a>
+        </div>
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#" class="nav__link">Home</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">New</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Popular</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Trending</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Categories</a>
+          </li>
+        </ul>
+        <div class="burger-icon">
+          <i id="burger-icon" class="fa-solid fa-bars"></i>
+        </div>
+      </div>
+    </nav>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | News homepage</title>
+    <aside class="side-drawer">
+      <div class="x-icon">
+        <i id="x-icon" class="fa-solid fa-xmark"></i>
+      </div>
+      <ul class="side-drawer__items">
+        <li class="side-drawer__item">
+          <a href="#" class="side-drawer__link">Home</a>
+        </li>
+        <li class="side-drawer__item">
+          <a href="#" class="side-drawer__link">New</a>
+        </li>
+        <li class="side-drawer__item">
+          <a href="#" class="side-drawer__link">Popular</a>
+        </li>
+        <li class="side-drawer__item">
+          <a href="#" class="side-drawer__link">Trending</a>
+        </li>
+        <li class="side-drawer__item">
+          <a href="#" class="side-drawer__link">Categories</a>
+        </li>
+      </ul>
+    </aside>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <main class="head-article">
+      <div class="head-article__wrapper">
+        <div class="main-article__image">
+          <picture>
+            <source
+              media="(max-width: 756px)"
+              srcset="assets/images/image-web-3-mobile.jpg"
+            />
+            <source
+              media="(min-width: 757px)"
+              srcset="assets/images/image-web-3-desktop.jpg"
+            />
+            <img src="assets/images/image-web-3-desktop.jpg" />
+          </picture>
+        </div>
+        <h1 class="main-article__heading">The Bright Future of Web 3.0?</h1>
+        <p class="main_article__text">
+          We dive into the next evolution of the web that claims to put the
+          power of the platforms back into the hands of the people. But is it
+          really fulfilling its promise?
+        </p>
+        <div class="btn-wrapper">
+          <button class="main-article__btn">READ MORE</button>
+        </div>
+      </div>
+    </main>
 
-  Home
-  New
-  Popular
-  Trending
-  Categories
-
-  The Bright Future of Web 3.0?
-
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
-
-  Read more
-
-  New 
-
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
-
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </body>
 </html>
+
+<!-- 
+  The Bright Future of Web 3.0? We dive
+    into the next evolution of the web that claims to put the power of the
+    platforms back into the hands of the people. But is it really fulfilling its
+    promise? Read more New Hydrogen VS Electric Cars Will hydrogen-fueled cars
+    ever catch up to EVs? The Downsides of AI Artistry What are the possible
+    adverse effects of on-demand AI image generation? Is VC Funding Drying Up?
+    Private funding by VC firms is down 50% YOY. We take a look at what that
+    means. 01 Reviving Retro PCs What happens when old PCs are given modern
+    upgrades? 02 Top 10 Laptops of 2022 Our best picks for various needs and
+    budgets. 03 The Growth of Gaming How the pandemic has sparked fresh
+    opportunities.
+ -->
