Build head article styles mobile

--- a/easy-news-homepage/news-homepage-main/index.html
+++ b/easy-news-homepage/news-homepage-main/index.html
@@ -77,27 +77,32 @@
 
     <main class="head-article">
       <div class="head-article__wrapper">
-        <div class="main-article__image">
+        <div>
           <picture>
             <source
               media="(max-width: 756px)"
               srcset="assets/images/image-web-3-mobile.jpg"
+              class="head-article__image"
             />
             <source
               media="(min-width: 757px)"
               srcset="assets/images/image-web-3-desktop.jpg"
+              class="head-article__image"
             />
-            <img src="assets/images/image-web-3-desktop.jpg" />
+            <img
+              src="assets/images/image-web-3-desktop.jpg"
+              class="head-article__image"
+            />
           </picture>
         </div>
-        <h1 class="main-article__heading">The Bright Future of Web 3.0?</h1>
-        <p class="main_article__text">
+        <h1 class="head-article__heading">The Bright Future of Web 3.0?</h1>
+        <p class="head-article__text">
           We dive into the next evolution of the web that claims to put the
           power of the platforms back into the hands of the people. But is it
           really fulfilling its promise?
         </p>
         <div class="btn-wrapper">
-          <button class="main-article__btn">READ MORE</button>
+          <button class="head-article__btn">READ MORE</button>
         </div>
       </div>
     </main>
