Build new articles mobile styles

--- a/easy-news-homepage/news-homepage-main/index.html
+++ b/easy-news-homepage/news-homepage-main/index.html
@@ -107,6 +107,38 @@
       </div>
     </main>
 
+    <aside class="new-articles">
+      <div class="new-articles__wrapper">
+        <h2 class="new-articles__header">New</h2>
+        <ul class="new-articles__list">
+          <li class="new-articles__item">
+            <h3 class="new-articles__item-header">Hydrogen VS Electric Cars</h3>
+            <p class="new-articles__item-body">
+              Will hydrogen-fueled cars ever catch up to EVs?
+            </p>
+            <div class="border"></div>
+          </li>
+          <li class="new-articles__item">
+            <h3 class="new-articles__item-header">
+              The Downsides of AI Aristry
+            </h3>
+            <p class="new-articles__item-body">
+              What are the possible adverse effects of on-deman AI image
+              generation?
+            </p>
+            <div class="border"></div>
+          </li>
+          <li class="new-articles__item">
+            <h3 class="new-articles__item-header">Is VS Funding Drying Up?</h3>
+            <p class="new-articles__item-body">
+              Private funding from VC firms down 50% YOY. We take a look at what
+              it means.
+            </p>
+          </li>
+        </ul>
+      </div>
+    </aside>
+
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
