Build score HTML

--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -16,6 +16,17 @@
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
+    <div class="container">
+      <div class="score">
+        <p class="score__title">Your Result</p>
+        <div class="score__number">76 of 100</div>
+        <p class="score__rank">Great</p>
+        <p class="score__description">
+          You scored higher than 65% of the people who have taken these tests.
+        </p>
+      </div>
+      <div class="summary"></div>
+    </div>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
@@ -28,8 +39,7 @@
 <!-- 
 
   Your Result
-  76
-  of 100
+  
 
   Great
   You scored higher than 65% of the people who have taken these tests.
