Add summary HTML

--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -25,7 +25,32 @@
           You scored higher than 65% of the people who have taken these tests.
         </p>
       </div>
-      <div class="summary"></div>
+      <div class="summary">
+        <p class="summary__title">Summary</p>
+        <div class="summary__category">
+          <div class="summary__icon"></div>
+          <p class="summary__class">Reaction</p>
+          <p class="summary_score">80 <span>/ 100</span></p>
+        </div>
+        <div class="summary__category">
+          <div class="summary__icon"></div>
+          <p class="summary__class">Memory</p>
+          <p class="summary_score">92 <span>/ 100</span></p>
+        </div>
+        <div class="summary__category">
+          <div class="summary__icon"></div>
+          <p class="summary__class">Verbal</p>
+          <p class="summary_score">61 <span>/ 100</span></p>
+        </div>
+        <div class="summary__category">
+          <div class="summary__icon"></div>
+          <p class="summary__class">Visual</p>
+          <p class="summary_score">72 <span>/ 100</span></p>
+        </div>
+        <div class="summary__btn">
+          <button>Continue</button>
+        </div>
+      </div>
     </div>
     <div class="attribution">
       Challenge by
@@ -38,12 +63,6 @@
 
 <!-- 
 
-  Your Result
-  
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
   Summary
 
   Reaction
